@startuml model

entity "Users" as users {
  *id: integer
  --
  *name: string
  *email: string
  *password: string
  *deleted: boolean
}

entity "Relationships" as relationships {
  *id: integer
  --
  *user_id: integer
  *calendar_id: integer
  'permission: number
  *deleted: boolean
}

entity "Calendars" as calendars {
  *id: integer
  --
  *title: string
  *deleted: boolean
  ' kind: number (private, public)
}

entity "Schedules" as schedules {
  *id: integer
  --
  *calendar_id: integer
  *fr_datetime: datetime
  *to_datetime: datetime
  *title: string
  ' description: text
  *deleted: boolean
}

users ||--|{ relationships
relationships }o--o{ calendars
calendars }o--o{ schedules

@enduml